1.server代码重构,使用hapi代替express; 2. cookie功能完成

--- a/tool/tpl_routes.ejs
+++ b/tool/tpl_routes.ejs
@@ -10,6 +10,9 @@ let routes = [
   <% if (routes[i].exact) { %>
     exact: true,
   <% } %>
+  <% if (routes[i].auth) { %>
+    auth: true,
+  <% } %>
     component: <%- routes[i].component %>
   <%= '},' %>
   <% } -%>
